--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            <div class="details">
              <div class="name">SYLLABUS</div>
              <div class="job"><a href="https://drive.google.com/file/d/1ANl070jMlmaLdPNKem81wbDCBvg189I2/view?usp=sharing">Download</a></div><br>
-             <div class="job"><a href="https://igdtuwresource.github.io/coming-soon/">View subjects...</a></div>
+             <div class="job"><a href="https://igdtuwresource.github.io/MAE-4th/">View subjects...</a></div>
            </div><br><br>
            
          </div>
