--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <div class="box">
             <div class="content">
               <h2>01</h2>
-              <h3>1st SEMESTER</h3>
-              <a href="https://igdtuwresource.github.io/syllabus/">View Syllabus</a>
-              <a href="https://igdtuwresource.github.io/m/">Explore Subjects</a>
+              <h3>1st YEAR</h3>
+              <a href="https://igdtuwresource.github.io/m/">1st SEM</a><br>
+              <a href="https://igdtuwresource.github.io/n/">2nd SEM</a>
             </div>
           </div>
         </div>
@@ -54,9 +54,9 @@
           <div class="box">
             <div class="content">
               <h2>02</h2>
-              <h3>2ND SEMESTER</h3>
-              <a href="https://igdtuwresource.github.io/syllabus/">View Syllabus</a>
-              <a href="https://igdtuwresource.github.io/n/">Explore Subjects</a>
+              <h3>2nd YEAR</h3>
+              <a href="https://igdtuwresource.github.io/o/">3rd SEM</a><br>
+              <a href="https://igdtuwresource.github.io/MAE-4th/">4th SEM</a>
             </div>
           </div>
         </div>
@@ -67,9 +67,9 @@
         <div class="box">
           <div class="content">
             <h2>03</h2>
-            <h3>3RD SEMESTER</h3>
-            <a href="https://igdtuwresource.github.io/syllabus/">View Syllabus</a>
-            <a href="https://igdtuwresource.github.io/o/">Explore Subjects</a>
+            <h3>3rd YEAR</h3>
+            <a href="">5th SEM</a><br>
+            <a href="">6th SEM</a>
           </div>
         </div>
       </div>
@@ -78,9 +78,9 @@
         <div class="box">
           <div class="content">
             <h2>04</h2>
-            <h3>4TH SEMESTER</h3>
-            <a href="https://igdtuwresource.github.io/syllabus/">View Syllabus</a>
-            <a href="https://igdtuwresource.github.io/MAE-4th/">Explore Subjects</a>
+            <h3>4th YEAR</h3>
+            <a href="">7th SEM</a><br>
+            <a href="">8th SEM</a>
           </div>
         </div>
       </div>
